# snc-cli

./: CLAUDE.md  README.md  pyproject.toml  run_sync.sh  supabase
core/supabase/: config.toml
docs/change-requests/: CHANGE-REQUEST-001-DISPATCH.md  CHANGE-REQUEST-004-CREW-ASSIGNMENT-AND-DISPATCH-REFINEMENT.md  CHANGE-REQUEST-007-JOB-LOCATION-REQUIRED.md  CHANGE-REQUEST-010-JOB-DELETE.md  CHANGE-REQUEST-AUTH-001-USER-PROFILES.md  CHANGE-REQUEST-AUTH-002-ROW-LEVEL-SECURITY.md  CHANGE-REQUEST-AUTH-004-CLI-LOGIN-FLOW.md  CHANGE-REQUEST-AUTH-005-CLI-JWT-INTEGRATION.md  CHANGE-REQUEST-AUTH-006-AGENT-SERVICE-ACCOUNTS.md  CHANGE-REQUEST-ENV-001-CLI-MULTI-ENV.md  CHANGE-REQUEST-HCSS-001-HCSS-SYNC-LAYER.md  CHANGE-REQUEST-HCSS-002-SCHEDULED-SYNC.md  CHANGE-REQUEST-HCSS-003-TELEMATICS-SNAPSHOTS.md  CHANGE-REQUEST-HCSS-004-RPC-MULTI-PROVIDER.md  CHANGE-REQUEST-HCSS-005-CLI-GEOFENCES-TELEMATICS.md  CHANGE-REQUEST-HCSS-006-ENABLE-POSTGIS.md  CHANGE-REQUEST-HCSS-006-RECONCILIATION-ENGINE.md  CHANGE-REQUEST-HCSS-010-OEM-TELEMETRICS-LAYER.md  CHANGE-REQUEST-HCSS-011-SYNC-LOG.md  CHANGE-REQUEST-HCSS-013-RECONCILIATION-ENGINE.md  CHANGE-REQUEST-HCSS-014-SYNC-LOG-DETAILS.md  CHANGE-REQUEST-HCSS-015-RECONCILIATION-ACTIVE-COUNTS.md  CHANGE-REQUEST-HCSS-017A-TELEMETRICS-ENGINE-TIMESTAMP.md  CHANGE-REQUEST-JDLINK-001A-CLI-INTEGRATION.md  CHANGE-REQUEST-PERM-001-DYNAMIC-PERMISSIONS.md  CHANGE-REQUEST-PERM-003-CLI-ERROR-HANDLING.md
snc_cli/: auth.py  client.py  main.py  models.py  output.py
snc_cli/commands/: auth.py  business_unit.py  crew_assignment.py  dispatch.py  employee.py  job.py  (+4 more)
(+32 files in other folders)
